# divfx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gen.bat  index.html  vcpkg.json
data/: dx11_prelude.inc  dx12_prelude.inc  gnmx_prelude.inc  vulkan_prelude.inc
src/: Cards.cpp  Cards.hpp  D3D.cpp  D3D.hpp  DivFxMain.cpp  Util.cpp  Util.hpp
